fixed lazy loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,9 @@
                         <a class="nav-link" [routerLink]="['/users']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Users</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" [routerLink]="['/lazy-users']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">lazy Users</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" [routerLink]="['/test']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">test</a>
                     </li>
                     <li class="nav-item">
