--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
                         <a class="nav-link" [routerLink]="['/unknown']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Unknown</a>
                     </li>
                     </ul>
+                    <form class="form-inline my-2 my-lg-0" id="login-navbar">
+                        <button class="custom-button" type="submit" (click)="goToLogin()">Login</button>
+                    </form>
                 </div>
                 </div>
             </nav>
