--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;     background-color: #A6A57A;
+}
 
 .success {
     background-color: #4caf50; 
